tdf#162297 Wrap tooltips in Qt5

Acoording to the Qt documentation, in order to wrap the tooltip a rich-text style needs to be set.

This patch sets a dummy style to make sure the tooltip gets wrapped in LO.

Change-Id: I7e950932572030581abc1c81fb4c146cb4394eb4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171411
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit fa89130d4980662642cb81a05ec044dbe21fd5d0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171412